# Eucalyptus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  checklines.py  sandbox.cpp  sphere.fbx  ui_test.cpp
Eucalyptus/: CMakeLists.txt
Eucalyptus/$(SRCDIR)/ui/: ui_shaders.h
Eucalyptus/Eucalyptus/include/ui/: ui_shaders.h
Eucalyptus/include/: Eucalyptus.h
Eucalyptus/include/Eucalyptus/: init.h  internal.h  window.h
Eucalyptus/include/Eucalyptus/components/: mesh.h  model_renderer.h  transform.h  transform2d.h
Eucalyptus/include/Eucalyptus/ecs/: component.h  object.h  scene.h
Eucalyptus/include/Eucalyptus/graphics/: camera.h  material.h  mesh.h  model.h  shader.h  texture.h
Eucalyptus/include/Eucalyptus/input/: input_dispatcher.h  keycodes.h
Eucalyptus/include/Eucalyptus/loaders/: freader.h  glb.h  gltf.h
Eucalyptus/include/Eucalyptus/math/: color.h  vector2.h  vector3.h  vector4.h  vertex.h
Eucalyptus/include/Eucalyptus/ui/: button.h  panel.h  ui_renderer.h
Eucalyptus/src/: Eucalyptus.h  api.h  clog.c  globals.h  internal.cpp  internal.h
Eucalyptus/src/audio/: audio.cpp  audio.h
Eucalyptus/src/base/: init.cpp  window.cpp
Eucalyptus/src/color/: color.cpp  color.h
Eucalyptus/src/components/: mesh.cpp  model_renderer.cpp  transform.cpp
Eucalyptus/src/ecs/: object.cpp  scene.cpp
Eucalyptus/src/error/: error.cpp  error.h
Eucalyptus/src/graphics/: camera.cpp  material.cpp  material.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  texture.cpp  texture.h
Eucalyptus/src/input/: input_dispatcher.cpp
Eucalyptus/src/light/: light.h
Eucalyptus/src/loaders/: freader.cpp  glb.cpp
Eucalyptus/src/log/: clog.h  logger.c  logger.cpp  logger.h
Eucalyptus/src/math/: matrix.cpp  matrix.h  transform.cpp  transform.h  vector.cpp  vector.h
Eucalyptus/src/meshloader/: loader.cpp  loader.h
Eucalyptus/src/shader/: internal_shader_source.h  shader.cpp  shader.h
Eucalyptus/src/ui/: button.cpp  panel.cpp  ui_panel.frag  ui_panel.vert  ui_renderer.cpp  ui_shaders.h  ui_shaders.h.in
Eucalyptus/src/window/: window.cpp  window.h  windowConfig.cpp  windowConfig.h
assets/models/: sphere.glb  tree.glb
assets/shader/: default.frag  default.vert  normals.frag  vert.vs
models/: tree-tex.mtl
sandbox/: CMakeLists.txt  main.cpp
shader/: frag.fs  vert.vs
shaders/: fragment.fs  vertex.vs
